@@ -103,6 +103,37 @@ public class ServerTasks {
             }
         }
     }
+    
+    /**
+     * Append module path and add modules to java options when there is at least
+     * one '--add-opens' without 'ALL-UNNAMED'.
+     * <p/>
+     * @param server    GlassFish server entity.
+     * @param optList   Returned list of java options.
+     */
+    private static void appendModulePath(GlassFishServer server, 
+            List<String> optList) {
+        boolean needed = optList
+                .stream()
+                .filter(
+                        opt ->
+                                opt.contains("--add-opens")
+                                &&
+                                !opt.contains("ALL-UNNAMED")
+                )
+                .findAny()
+                .isPresent();
+        if (needed) {
+            // appending module path and all modules in order to use
+            // '--add-opens' without 'ALL-UNNAMED'.
+            // See https://github.com/eclipse-ee4j/glassfish/pull/25537
+            String modulePath = server.getServerHome() + File.separator
+                    + ServerUtils.GF_LIB_DIR_NAME + File.separator 
+                    + "bootstrap";
+            optList.add("--module-path=" + modulePath);
+            optList.add("--add-modules=ALL-MODULE-PATH");
+        }
+    }
 
     /**
      * Adds server variables from variables map into Java VM options
@@ -142,8 +173,9 @@ public class ServerTasks {
         JvmConfigReader jvmConfigReader = new JvmConfigReader(DAS_NAME);
         String domainAbsolutePath = server.getDomainsFolder() + File.separator
                 + server.getDomainName();
-        String domainXmlPath = domainAbsolutePath + File.separator + "config"
-                + File.separator + "domain.xml";
+        String domainXmlPath = domainAbsolutePath + File.separator 
+                + ServerUtils.GF_DOMAIN_CONFIG_DIR_NAME + File.separator 
+                + ServerUtils.GF_DOMAIN_CONFIG_FILE_NAME;
         if (!TreeParser.readXml(new File(domainXmlPath), jvmConfigReader)) {
             // retry with platform default
             LOGGER.log(Level.INFO, "Retrying with {0} encoding", Charset.defaultCharset());
@@ -154,6 +186,7 @@ public class ServerTasks {
             }
         }
         List<String> optList = jvmConfigReader.getOptList();
+        appendModulePath(server, optList);
         Map<String, String> propMap = jvmConfigReader.getPropMap();
         addJavaAgent(server, jvmConfigReader);
         // try to find bootstraping jar - usually glassfish.jar
